# sa-service-based

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
api-gateway/: nginx.conf
api-gateway/conf.d/: index.html  proxy-api.conf
likes-service/src/api/: app.py
likes-service/src/modules/likes/: routes.py
likes-service/src/storages/mongo/: models.py
messages-service/src/api/: app.py  lifespan.py
messages-service/src/modules/messages/: routes.py
messages-service/src/storages/mongo/: models.py
users-service/src/api/: app.py
users-service/src/modules/users/: routes.py
users-service/src/storages/mongo/: models.py
